become, undefined provider, readme, ansible_ssh

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,10 @@
 inventory = inventory
 pipelining = True
 retry_files_enabled = False
+host_key_checking = False
+
+[paramiko_connection]
+record_host_keys = False
+
+[ssh_connection]
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null
