--- a/common.yml
+++ b/common.yml
@@ -9,15 +9,15 @@
     - config.cfg    
   
   pre_tasks:
-    - name: Install prerequisites.
+    - name: Install prerequisites
       raw: sudo apt-get update -qq && sudo apt-get install -qq -y python2.7
-    - name: Configure defaults.
+    - name: Configure defaults
       raw: sudo update-alternatives --install /usr/bin/python python /usr/bin/python2.7 1 
 
   tasks:
-
   - name: Wait for port 22 to become available
     local_action: "wait_for port=22 host={{ inventory_hostname }}"
+    become: false
 
   - name: Gather Facts
     setup:
@@ -42,10 +42,12 @@
   - name: Wait for shutdown
     local_action: wait_for host={{ inventory_hostname }} port=22 state=stopped timeout=120
     when: reboot_required is defined and reboot_required.stdout == 'required'
+    become: false    
 
   - name: Wait until SSH becomes ready...
     local_action: wait_for host={{ inventory_hostname }} port=22 state=started timeout=120
-    when: reboot_required is defined and reboot_required.stdout == 'required'    
+    when: reboot_required is defined and reboot_required.stdout == 'required'
+    become: false    
     
   # SSH fixes
       
@@ -100,19 +102,3 @@
     - name: flush routing cache
       shell: echo 1 > /proc/sys/net/ipv4/route/flush     
 
-- hosts: localhost
-  gather_facts: false
-  vars_files:
-    - config.cfg    
-  
-  tasks:
-  - debug:
-      msg:
-        - "#----------------------------------------------------------------------#"
-        - "#                          Congratulations!                            #"
-        - "#                    Your IPsec server is running.                     #"
-        - "#  Config files and X.509 certificates in the directory: ./configs/    #"
-        - "#          After connect go to https://www.dnsleaktest.com/            #"
-        - "#        and ensure that all your traffic passes through the VPN.      #"
-        - "#----------------------------------------------------------------------#"    
-  
