change IP ranges #37

--- a/config.cfg
+++ b/config.cfg
@@ -14,7 +14,8 @@ server_name: example.com
 server_ip: "{{ ansible_ssh_host }}"
 dns_servers:
   - 8.8.8.8
-  - 8.8.4.4
+  - 8.8.4.4  
+vpn_network: 10.19.48.0/24  
 
 users:
   - mr.smith
