--- a/vpn.yml
+++ b/vpn.yml
@@ -28,7 +28,7 @@
       - netfilter-persistent
 
   - name: Configure iptables so IPSec traffic can traverse the tunnel
-    iptables: table=nat chain=POSTROUTING source=10.0.0.0/24 jump=MASQUERADE
+    iptables: table=nat chain=POSTROUTING source="{{ vpn_network }}" jump=MASQUERADE
     notify:
     - save iptables
     
