moved to use an IP instead of a domain

--- a/config.cfg
+++ b/config.cfg
@@ -5,13 +5,9 @@ easyrsa_ca_expire: 3650
 easyrsa_cert_expire: 3650
 easyrsa_p12_export_password: vpn
 
-# if True re-init all existing certificates. Boolean
-easyrsa_reinit_existent: False
+# if True re-init all existing certificates.
+easyrsa_reinit_existent: True
 
-# Domain or ip
-# server_name: - this domain or ip that you will use in your VPN client
-server_name: example.com
-server_ip: "{{ ansible_ssh_host }}"
 dns_servers:
   - 8.8.8.8
   - 8.8.4.4  
