--- a/config.cfg
+++ b/config.cfg
@@ -11,7 +11,8 @@ easyrsa_reinit_existent: True
 dns_servers:
   - 8.8.8.8
   - 8.8.4.4  
-vpn_network: 10.19.48.0/24  
+vpn_network: 10.19.48.0/24
+server_name: "{{ ansible_ssh_host }}"
 
 users:
   - mr.smith
