Configure IPv6 on the VPN #8

--- a/config.cfg
+++ b/config.cfg
@@ -10,8 +10,11 @@ easyrsa_reinit_existent: True
 
 dns_servers:
   - 8.8.8.8
-  - 8.8.4.4  
+  - 8.8.4.4
+  - 2001:4860:4860::8888
+  - 2001:4860:4860::8844
 vpn_network: 10.19.48.0/24
+vpn_network_ipv6: fd9d:bc11:4021:69ce::/64
 server_name: "{{ ansible_ssh_host }}"
 
 users:
