--- a/config.cfg
+++ b/config.cfg
@@ -14,7 +14,7 @@ dns_servers:
   - 2001:4860:4860::8888
   - 2001:4860:4860::8844
 vpn_network: 10.19.48.0/24
-vpn_network_ipv6: fd9d:bc11:4021:69ce::/64
+vpn_network_ipv6: 'fd9d:bc11:4021:69ce::/64'
 server_name: "{{ ansible_ssh_host }}"
 
 users:
