--- a/security.yml
+++ b/security.yml
@@ -116,10 +116,12 @@
     
   - name: Enable packet forwarding for IPv4
     sysctl: name=net.ipv4.ip_forward value=1
+    
+  - name: Enable packet forwarding for IPv6
+    sysctl: name=net.ipv6.conf.all.forwarding value=1    
 
   - name: Do not send ICMP redirects (we are not a router)
-    sysctl: name=net.ipv4.conf.all.send_redirects value=0    
-
+    sysctl: name=net.ipv4.conf.all.send_redirects value=0
       
   handlers:
     - name: restart auditd
