--- a/features.yml
+++ b/features.yml
@@ -67,7 +67,21 @@
       to_destination: 172.16.0.1:53
     notify:
     - save iptables
-    when: service_dns is defined and service_dns == "Y"
+    when: service_dns is defined and service_dns == "Y" # TODO: service_dns is not defined, because the variable in vars_prompt
+    
+  - name: Forward all DNS requests to the local resolver
+    iptables: 
+      table: nat
+      chain: PREROUTING
+      protocol: udp
+      destination_port: 53
+      source: "{{ vpn_network_ipv6 }}"
+      jump: DNAT
+      to_destination: fcaa::1:53
+      ip_version: ipv6
+    notify:
+    - save iptables
+    when: service_dns is defined and service_dns == "Y"    
     
   - name: Dnsmasq enabled and started
     service: name=dnsmasq state=started enabled=yes
