--- a/config.cfg
+++ b/config.cfg
@@ -5,17 +5,22 @@ easyrsa_ca_expire: 3650
 easyrsa_cert_expire: 3650
 easyrsa_p12_export_password: vpn
 
-# if True re-init all existing certificates.
-easyrsa_reinit_existent: True
+# If True re-init all existing certificates. (True or False)
+easyrsa_reinit_existent: False
 
+vpn_network: 10.19.48.0/24
+vpn_network_ipv6: 'fd9d:bc11:4021:69ce::/64'
+server_name: "{{ ansible_ssh_host }}"
+
+# Enable this variable if you want to use a local DNS resolver to block ads while surfing. (True or False)
+service_dns: True
+
+# If you don't want to use a local DNS resolver (option `service_dns`) you need to define DNS servers in this list. 
 dns_servers:
   - 8.8.8.8
   - 8.8.4.4
   - 2001:4860:4860::8888
   - 2001:4860:4860::8844
-vpn_network: 10.19.48.0/24
-vpn_network_ipv6: 'fd9d:bc11:4021:69ce::/64'
-server_name: "{{ ansible_ssh_host }}"
 
 users:
   - mr.smith
