--- a/roles/ec2/tasks/main.yml
+++ b/roles/ec2/tasks/main.yml
@@ -73,6 +73,8 @@
     auditd_enabled: " {{ auditd_enabled }}"
   with_items: "{{ ec2.instances }}"
 
-- name: Wait for SSH to come up
-  wait_for: host={{ item.public_dns_name }} port=22 delay=60 timeout=320 state=started
+- name: Wait for SSH to become available
+  local_action: "wait_for port=22 host={{ item.public_dns_name }} timeout=320"
   with_items: "{{ ec2.instances }}"
+  become: false  
+  
