Modify user-management function

--- a/digitalocean.yml
+++ b/digitalocean.yml
@@ -108,6 +108,7 @@
 
     - name: Wait for SSH to become available
       local_action: "wait_for port=22 host={{ inventory_hostname }} timeout=320"
+      become: false
     
   roles:
     - common
