--- a/users.yml
+++ b/users.yml
@@ -1,7 +1,34 @@
 ---
 
+- hosts: localhost
+  gather_facts: False
+  vars_files:
+    - config.cfg  
+  vars_prompt:
+      
+    - name: "server_ip"
+      prompt: "\nEnter IP address of your server:\n"
+      private: no
+      
+    - name: "server_user"
+      prompt: "What user should we use to login on the server?:\n"
+      default: "root"
+      private: no
+      
+  tasks:
+    - name: Add the server to the vpn-host group
+      add_host: 
+        hostname: "{{ server_ip }}"
+        groupname: vpn-host
+        ansible_ssh_user: "{{ server_user }}"
+        ansible_python_interpreter: "/usr/bin/python2.7"
+
+    - name: Wait for SSH to become available
+      local_action: "wait_for port=22 host={{ server_ip }} timeout=320"
+      become: false      
+
 - name: User management
-  hosts: user-management
+  hosts: vpn-host
   gather_facts: false
   become: true
   vars_files:
