Split the features role in two #49

--- a/azure.yml
+++ b/azure.yml
@@ -89,7 +89,8 @@
   roles:
     - common
     - security
-    - features
+    - proxy
     - vpn
+    - { role: dns_adblocking , when: dns_enabled is defined and dns_enabled == "Y" }
     - { role: logging, when: auditd_enabled is defined and auditd_enabled == 'Y' }
 
