default value for a public key #54

--- a/ec2.yml
+++ b/ec2.yml
@@ -54,6 +54,7 @@
 
     - name: "ssh_public_key"
       prompt: "Enter the local path to your SSH public key (ex: ~/.ssh/id_rsa.pub):\n"
+      default: "~/.ssh/id_rsa.pub"
       private: no
 
     - name: "dns_enabled"
