--- a/non-cloud.yml
+++ b/non-cloud.yml
@@ -22,6 +22,11 @@
       prompt: "Do you want to use auditd ? (Y or N):\n"
       default: "Y"
       private: no
+      
+    - name: "easyrsa_p12_export_password"
+      prompt: "Enter the password for p12 certificates:\n"
+      default: "vpn"
+      private: yes         
 
   tasks:
     - name: Add the server to the vpn-host group
@@ -32,6 +37,7 @@
         ansible_python_interpreter: "/usr/bin/python2.7"
         dns_enabled: "{{ dns_enabled }}"
         auditd_enabled: " {{ auditd_enabled }}"
+        easyrsa_p12_export_password: "{{ easyrsa_p12_export_password }}"
 
     - name: Wait for SSH to become available
       local_action: "wait_for port=22 host={{ server_ip }} timeout=320"
