--- a/config.cfg
+++ b/config.cfg
@@ -10,6 +10,7 @@ easyrsa_reinit_existent: False
 vpn_network: 10.19.48.0/24
 vpn_network_ipv6: 'fd9d:bc11:4021:69ce::/64'
 server_name: "{{ ansible_ssh_host }}"
+IP_subject_alt_name: "{{ ansible_ssh_host }}"
 
 # Enable this variable if you want to use a local DNS resolver to block ads while surfing. (True or False)
 service_dns: True
